--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,7 @@
     {
       "src": "package.json",
       "use": "@vercel/static-build"
-    },
-    { "src": "/dist/**", "use": "@now/static" }
+    }
   ],
-  "routes": [{ "src": "/js/(.*)", "headers": { "cache-control": "max-age=0" }, "dest": "/dist/$1" }]
+  "routes": [{ "src": "/js/(.*)", "headers": { "cache-control": "max-age=0" }, "dest": "/$1" }]
 }
