--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-replace": "^2.4.1",
+    "@rollup/plugin-typescript": "^8.2.0",
+    "@types/react": "^17.0.2",
     "rollup": "^2.39.1",
     "rollup-plugin-import-css": "^2.0.0",
-    "rollup-plugin-uglify": "^6.0.4"
+    "rollup-plugin-uglify": "^6.0.4",
+    "tslib": "^2.1.0",
+    "typescript": "^4.2.2"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@types/react-dom": "^17.0.1",
+    "izitoast": "^1.4.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
