--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,6 @@ jobs:
           git config user.email ${{ secrets.EMAIL }}
           yarn
           yarn build
-          git add -f
+          git add -f .
           git commit -m "build" && git push
           echo "success"
