--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@material-ui/core": "^4.11.3",
     "@types/react-dom": "^17.0.1",
     "izitoast": "^1.4.0",
+    "lodash-es": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
