--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@types/react": "^17.0.2",
     "rollup": "^2.39.1",
     "rollup-plugin-import-css": "^2.0.0",
+    "rollup-plugin-styles": "^3.14.1",
     "rollup-plugin-uglify": "^6.0.4",
     "tslib": "^2.1.0",
     "typescript": "^4.2.2"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/react-dom": "^17.0.1",
+    "antd": "^4.13.0",
     "izitoast": "^1.4.0",
     "lodash-es": "^4.17.21",
     "react": "^17.0.1",
