--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@rollup/plugin-replace": "^2.4.1",
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/react": "^17.0.2",
+    "prettier": "^2.2.1",
     "rollup": "^2.39.1",
     "rollup-plugin-import-css": "^2.0.0",
     "rollup-plugin-styles": "^3.14.1",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-uglify": "^6.0.4",
+    "rollup-plugin-uglify-es": "^0.0.1",
     "tslib": "^2.1.0",
-    "typescript": "^4.2.2",
-    "rollup-plugin-uglify-es": "^0.0.1"
+    "typescript": "^4.2.2"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
