--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.4.1",
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/react": "^17.0.2",
+    "babel-plugin-import": "^1.13.3",
+    "less": "^4.1.1",
+    "postcss": "^8.2.8",
     "prettier": "^2.2.1",
     "rollup": "^2.39.1",
     "rollup-plugin-import-css": "^2.0.0",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-styles": "^3.14.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-uglify": "^6.0.4",
