add plugins: video

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.4.1",
     "@rollup/plugin-typescript": "^8.2.0",
+    "@types/arrive": "^2.4.0",
     "@types/react": "^17.0.2",
     "babel-plugin-import": "^1.13.3",
     "less": "^4.1.1",
@@ -36,6 +37,7 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@types/react-dom": "^17.0.1",
     "antd": "^4.13.0",
+    "arrive": "^2.4.1",
     "izitoast": "^1.4.0",
     "lodash-es": "^4.17.21",
     "react": "^17.0.1",
