--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "build": "rm -rf dist && rollup -c"
+    "build": "rm -rf dist && rollup -c",
+    "build:debug": "NODE_ENV=debug rollup -c --watch"
   },
   "keywords": [],
   "author": "",
