--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@types/lodash": "^4.14.168",
     "@types/react-dom": "^17.0.1",
     "antd": "^4.13.0",
     "arrive": "^2.4.1",
     "izitoast": "^1.4.0",
     "lodash-es": "^4.17.21",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "tippy.js": "^6.3.1"
   }
 }
