--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rollup/plugin-typescript": "^8.2.0",
     "@types/arrive": "^2.4.0",
     "@types/react": "^17.0.2",
+    "@types/styled-components": "^5.1.9",
     "babel-plugin-import": "^1.13.3",
     "globby": "^11.0.3",
     "less": "^4.1.1",
@@ -43,6 +44,9 @@
     "lodash-es": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-spring": "^9.1.1",
+    "react-use": "^17.2.3",
+    "styled-components": "^5.2.3",
     "tippy.js": "^6.3.1"
   }
 }
